[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "urirun-api-mcp"
version = "0.1.0"
description = "MCP adapter exposing urirun runtime registry as tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31",
  "python-dotenv>=1.0",
]

[project.scripts]
urirun-api-mcp = "urirun_api_mcp.server:main"

[tool.setuptools]
packages = ["urirun_api_mcp"]
