[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "urirun-connector-mcp"
version = "0.2.0"
description = "MCP connector exposing the urirun runtime registry as tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31",
  "python-dotenv>=1.0",
]

[project.scripts]
urirun-connector-mcp = "urirun_api_mcp.server:main"
urirun-api-mcp = "urirun_api_mcp.server:main"

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Repository = "https://github.com/urirun-connectors/urirun-connector-mcp"
Issues = "https://github.com/urirun-connectors/urirun-connector-mcp/issues"

[tool.setuptools]
packages = ["urirun_api_mcp"]
